--- a/wizardindustry/templates/wizardindustry/base.html
+++ b/wizardindustry/templates/wizardindustry/base.html
@@ -3,15 +3,15 @@
 {% load i18n %}
 
 {% block page_title %}
-    {% translate "Example Plugin" %}
+    {% translate "Wizard Industry" %}
 {% endblock %}
 
 {% block header_nav_brand %}
-    {% translate "Example Plugin" %}
+    {% translate "Wizard Industry" %}
 {% endblock header_nav_brand %}
 
 {% block content %}
-    <div class="allianceauth-example-plugin">
+    <div class="allianceauth-wizardindustry-plugin">
         {% block details %}{% endblock %}
     </div>
 {% endblock %}
