--- a/wizardindustry/templates/wizardindustry/base.html
+++ b/wizardindustry/templates/wizardindustry/base.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block header_nav_collapse_left %}
-    {% include wizardindustry/partials/base/menu.html %}
+    {% include "wizardindustry/partials/base/menu.html" %}
 {% endblock %}
 
 {% block header_nav_brand %}
