Add CorporationAdmin model and corporation management template
- Created a new migration for the CorporationAdmin model with ManyToMany relationships for admin and regular users.
- Developed a new HTML template for managing corporation users, including a multi-select interface for assigning users as managers and allowed users.
- Implemented JavaScript functionality for dynamic corporation selection and user management.

--- a/wizardindustry/templates/wizardindustry/base.html
+++ b/wizardindustry/templates/wizardindustry/base.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block header_nav_brand %}
-    {% translate "Wizard Industry" %}
+    <a href="{% url 'wizardindustry:index' %}">{% translate "Wizard Industry" %}</a>
 {% endblock header_nav_brand %}
 
 
